# codex-session-cloner

./: .gitattributes  .gitignore  Makefile  codex-session-cloner  codex-session-cloner.cmd  codex-session-cloner.command  codex-session-cloner.ps1  codex-session-cloner.py  codex-session-cloner.py.bak  codex-session-toolkit  codex-session-toolkit.cmd  codex-session-toolkit.ps1  csc-launcher.ps1  csc-launcher.sh  pyproject.toml  readme.md  repair-desktop-notes.md  快速启动.bat
.github/workflows/: check.yml
scripts/compat/: csc-launcher.ps1  csc-launcher.sh  快速启动.bat
scripts/install/: install.unix.sh  install.windows.ps1
scripts/release/: build-release.sh  release-manifest.txt
src/ai_cli_kit/: cli.py
src/ai_cli_kit/claude/: history_remap.py  services.py
src/ai_cli_kit/claude/tui/: app.py  terminal.py
src/ai_cli_kit/codex/services/: dedupe.py  exporting.py  repair.py
src/ai_cli_kit/codex/stores/: bundles.py  desktop_state.py  (+1 more)
src/ai_cli_kit/core/: support.py
src/codex_session_cloner/: __init__.py  __main__.py  cli.py  core.py  terminal_ui.py  tui_app.py
src/codex_session_toolkit/: commands.py  support.py  validation.py
src/codex_session_toolkit/services/: clone.py  exporting.py  importing.py  repair.py
src/codex_session_toolkit/stores/: bundles.py  desktop_state.py  index.py  session_files.py
src/codex_session_toolkit/tui/: app.py  terminal.py
tests/: test_concurrency_and_paths.py  test_core_workflows.py  test_packaging_smoke.py  test_top_level_dispatch.py
tests/claude/: test_claude_hardening.py  test_cleanup.py
tests/core/: test_core_smoke.py
(+3 files in other folders)
